# sec-xbrl-pipeline

./: .gitignore  CLAUDE.md  companies.csv  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: claude-pr-review.yml
scripts/generate_mappings/: generate_mappings.py
sec_pipeline/: __init__.py
sec_pipeline/config/: __init__.py  statement_type_mappings.json
sec_pipeline/core/: config.py
sec_pipeline/ingestion/: __init__.py  schemas.py  sec_api.py  sec_url_builder.py
sec_pipeline/transformation/: __init__.py  xbrl_parser.py
tests/: test_sec_pipeline.py
