[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-xbrl-pipeline"
version = "0.1.0"
description = "SEC EDGAR XBRL filing ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "arelle-release",
]

[tool.hatch.build.targets.wheel]
packages = ["sec_pipeline"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
